// Copyright 2025 Supabase, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package multiorchdata;

import "clustermetadata.proto";
import "consensusdata.proto";
import "google/protobuf/timestamp.proto";
import "multipoolermanagerdata.proto";

option go_package = "github.com/multigres/multigres/go/pb/multiorchdata";

// PoolerHealthState represents the runtime state of a MultiPooler instance.
// This is the in-memory representation used by multiorch to track pooler health.
//
// It contains:
// - Core pooler metadata (embedded MultiPooler from topology)
// - Timestamps for staleness detection
// - Health metrics from Status RPC
// - Computed fields for quick access
message PoolerHealthState {
  // Core pooler metadata from topology.
  // This contains: id, database, table_group, shard, key_range, type,
  // serving_status, hostname, port_map.
  clustermetadata.MultiPooler multi_pooler = 1;

  // Computed fields (cached by multiorch)
  bool is_up_to_date = 2;
  bool is_last_check_valid = 3;

  // Timestamps for staleness detection
  google.protobuf.Timestamp last_check_attempted = 4;
  google.protobuf.Timestamp last_check_successful = 5;
  google.protobuf.Timestamp last_seen = 6;

  // Health status from Status RPC (populated after successful health check).
  // This is the type the pooler reports itself as, which may differ from
  // the topology type (multi_pooler.type) if there's a failover in progress
  // or type mismatch.
  clustermetadata.PoolerType pooler_type = 7;

  // Primary-specific status (populated when pooler_type == PRIMARY)
  multipoolermanagerdata.PrimaryStatus primary_status = 8;

  // Replica-specific status (populated when pooler_type == REPLICA)
  multipoolermanagerdata.StandbyReplicationStatus replication_status = 9;

  // Whether PostgreSQL is currently running on this node.
  // Determined from the Status RPC's postgres_running field.
  // Used to determine PrimaryReachable in the analyzer - a primary with postgres down
  // should trigger PrimaryIsDead recovery even if the previous PrimaryStatus data exists.
  bool is_postgres_running = 10;

  // Whether the pooler considers itself initialized.
  // Determined from the Status RPC's is_initialized field.
  // This is based on the data directory state, not LSN.
  bool is_initialized = 11;

  // Whether the PostgreSQL data directory exists.
  // Determined from the Status RPC's has_data_directory field.
  bool has_data_directory = 12;

  // Consensus status from ConsensusStatus RPC (for divergence detection)
  consensusdata.StatusResponse consensus_status = 13;
}
